--- a/src/index.html
+++ b/src/index.html
@@ -10,36 +10,8 @@
   
 </head>
 <body>
-  <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">
-        <img class="logo" style="height: 30px" src="/assets/images/ng-book-2-minibook.png">
-      </a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-      </ul>
-      
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><b>Angular 2 Simple Reddit</b></a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
   <!-- Menu Bar -->
- <!-- <div class="ui menu">
+ <div class="ui menu">
     <div class="ui container">
       <a href="#" class="header item">
         <img class="logo" src="/assets/images/ng-book-2-minibook.png">
@@ -51,8 +23,7 @@
         </h1>
       </div>
     </div>
-  </div>-->
-
+  </div>
   <div class="ui main text container">
     <app-root>Loading </app-root> <!-- <--- Our app loads here! -->
   </div>
